--- a/SRS Project/SRS Project/scss/style.scss
+++ b/SRS Project/SRS Project/scss/style.scss
@@ -25,6 +25,10 @@ html, body {
     display: block;
 }
 
+.width150 {
+    width: 150px !important;
+}
+
 .width200 {
     width: 200px !important;
 }
@@ -33,8 +37,20 @@ html, body {
     width: 325px !important;
 }
 
+.top130 {
+    top: 130px !important;
+}
+
+.margin0_0 {
+    margin: 0 0 !important;
+}
+
 .padding0_10 {
     padding: 0 10px;
+}
+
+.bg_color_tpr {
+    background-color: transparent !important;
 }
 
 .header_part1 {
@@ -525,6 +541,278 @@ html, body {
             font-size: 12px;
         }
     }
+}
+
+.ctr_rightpart_home {
+    width: 100%;
+    height: 100%;
+    float: right;
+    position: absolute;
+    z-index: 1;
+    padding: 0 10px 15px 310px;
+}
+
+.ctr_rightpart_atdc {
+    width: 100%;
+    max-height: inherit;
+    min-height: initial;
+    float: right;
+    position: absolute;
+    z-index: 1;
+    padding: 0 10px 0 310px;
+}
+
+.rtpt_atdc_box {
+    width: 100%;
+    min-height: 500px;
+    float: left;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.03);
+    border-radius: 5px 5px;
+
+    .atdc_b_htrbox {
+        width: 100%;
+        height: 40px;
+        background-color: #222;
+        float: left;
+        border-radius: 5px 5px 0 0;
+        padding: 0 10px;
+
+        span {
+            width: initial;
+            float: left;
+            color: #fff;
+            line-height: 40px;
+            font-size: 14px;
+        }
+    }
+
+    .atdc_b_tablebox {
+        width: 100%;
+        line-height: 30px;
+        margin: 0 0 40px 0;
+        font-size: 12px;
+
+        thead {
+            background-color: #aaa;
+            height: 30px;
+
+            tr {
+                th {
+                    border-right: 1px #ccc solid;
+                    padding: 0 5px;
+                    color: #fff;
+                }
+            }
+        }
+    }
+
+    .atdc_b_totalbox {
+        width: 100%;
+        height: 30px;
+        background-color: rgba(0, 0, 0, 0.08);
+        border-radius: 0 0 5px 5px;
+        padding: 0 10px;
+        position: absolute;
+        bottom: 0;
+
+        span {
+            width: initial;
+            float: left;
+            color: #333;
+            line-height: 30px;
+            font-size: 12px;
+        }
+    }
+}
+
+.rtpt_home_box {
+    width: 100%;
+    height: inherit;
+    float: left;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.03);
+    border-radius: 5px 5px;
+
+    .rtpt_home_b_img {
+        width: 100%;
+        height: 200px;
+        margin: 0 0 10px 0;
+        background: url(../../img/htr_bg.jpg) top center no-repeat;
+        background-size: cover;
+        border-radius: 5px 5px 0 0;
+    }
+
+    .rtpt_home_b_tt {
+        width: 100%;
+        height: initial;
+        line-height: 18px;
+        font-size: 16px;
+        font-weight: bold;
+        float: left;
+        padding: 5px 5px;
+    }
+
+    .rtpt_home_b_linkpart {
+        width: 100%;
+        height: 40px;
+        margin: 20px 0 0 0;
+        padding: 12px 5px;
+        line-height: 16px;
+        float: left;
+        border-radius: 5px 5px;
+        background-color: #444;
+        color: #fff;
+        font-size: 14px;
+        font-weight: bold;
+    }
+}
+
+.bg_color_444 {
+    background-color: #444 !important;
+}
+
+.body_htrcenter {
+    width: 100%;
+    height: 40px;
+    float: left;
+    margin: 5px 0;
+    padding: 0 10px;
+    border-bottom: 2px #ccc solid;
+
+    .htrcenter_tab {
+        width: initial;
+        height: inherit;
+        float: left;
+        margin: 0 5px 0 0;
+        border-radius: 5px 5px 0 0;
+        background-color: #666;
+        color: #fff;
+        line-height: 40px;
+        padding: 0 10px;
+        position: relative;
+        cursor: pointer;
+        font-size: 14px;
+
+        .tab_btneff {
+            width: 100%;
+            height: 40px;
+            float: left;
+            border-radius: 5px 5px 0 0;
+            background-image: linear-gradient( rgba(255,255,255,0)50%, rgba(255,255,255,0.35)100%);
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    }
+
+    .htrcenter_tab:hover {
+        background-color: #444;
+
+        .tab_btneff {
+            width: 100%;
+            height: 40px;
+            float: left;
+            border-radius: 5px 5px 0 0;
+            background-image: linear-gradient( rgba(255,255,255,0)50%, rgba(255,255,255,0.35)100%);
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+        }
+    }
+}
+
+.ctr_leftpart_atd {
+    width: 300px;
+    height: initial;
+    float: left;
+    position: relative;
+    z-index: 10;
+    padding: 0 0 0 10px;
+
+    .leftpart_atd_box {
+        width: 100%;
+        height: initial;
+        min-height: 500px;
+        background-color: #444;
+        float: left;
+        position: relative;
+        border-radius: 5px 5px;
+        padding: 0 10px;
+
+        .atd_b_part {
+            width: 100%;
+            height: 40px;
+            float: left;
+            margin: 10px 0;
+
+            .atd_b_pt_tt {
+                width: initial;
+                line-height: 40px;
+                float: left;
+                padding: 0 5px;
+                color: #fff;
+                font-size: 14px;
+            }
+
+            .atd_b_pt_slt {
+                float: right;
+                position: relative;
+                height: 30px;
+                line-height: 30px;
+                margin: 5px 0;
+                width: 200px;
+                font-size: 12px;
+                border-radius: 5px 5px;
+            }
+        }
+
+        .atd_b_checkbox {
+            width: 100%;
+            height: initial;
+            line-height: 18px;
+            float: left;
+            padding: 6px 5px 6px 20px;
+            font-size: 12px;
+            color: #fff;
+
+            .atd_b_ckb_box {
+                margin: 2px 5px 0 0;
+                float: left;
+            }
+        }
+
+        .atd_b_ttbox {
+            width: 100%;
+            height: initial;
+            position: absolute;
+            bottom: 40px;
+            left: 0;
+            font-size: 12px;
+            color: #fff;
+            border-top: 1px #999 solid;
+            padding: 10px 10px;
+            margin: 5px 0;
+            line-height: 16px;
+        }
+
+        .atd_b_btnpart {
+            width: 100%;
+            height: initial;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 0 10px 10px;
+        }
+    }
+}
+
+.atdc_editbox1 {
+    margin: 10px 0;
+    min-height: initial;
+    border: 1px #aaa solid;
+    background-color: #fff;
 }
 
 .popup_bg {
@@ -1319,6 +1607,20 @@ ul {
     float: right;
     border-radius: 5px;
     background-color: #666;
+    color: #fff;
+    cursor: pointer;
+}
+
+.rtpt_printbtn {
+    width: initial;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    margin: 0 0 0 10px;
+    font-size: 14px;
+    float: right;
+    border-radius: 5px;
+    background-color: #f00;
     color: #fff;
     cursor: pointer;
 }
