CY 20200327 - holiday listing and create holiday

--- a/mTime/mTime/Content/style.css
+++ b/mTime/mTime/Content/style.css
@@ -1901,4 +1901,8 @@ ul li:hover {
   border-right: 10px solid #026f5d;
 }
 
+.input_field_fill_available {
+  width: -webkit-fill-available !important;
+}
+
 /*# sourceMappingURL=style.css.map */
