--- a/mTime/mTime/scss/style.scss
+++ b/mTime/mTime/scss/style.scss
@@ -1733,3 +1733,7 @@ ul {
     border-right: 10px solid #026f5d;
 }
 // Triangle
+
+.input_field_fill_available {
+    width: -webkit-fill-available !important;
+}
