--- a/mTime/mTime/scss/style.scss
+++ b/mTime/mTime/scss/style.scss
@@ -53,6 +53,23 @@ html, body {
     background-color: transparent !important;
 }
 
+.overflow_box {
+    width: 100%;
+    height: 445px;
+    float: left;
+    overflow: auto;
+}
+
+.bg_color_w {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    z-index: 1;
+}
+
 .header_part1 {
     width: 100%;
     height: 40px;
@@ -192,7 +209,7 @@ html, body {
                 float: right;
             }
 
-            .hd_pf_part1:hover, .hd_pf_part2:hover, .hd_pf_part3:hover, .hd_pf_part4:hover {
+            .hd_pf_part1:hover, .hd_pf_part2:hover, .hd_pf_part3:hover, .hd_pf_part4:hover, .hd_pf_part5:hover {
                 background-color: #038C76;
             }
 
@@ -323,6 +340,17 @@ html, body {
                     color: #fff;
                 }
             }
+
+            .hd_pf_part5 {
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                float: left;
+                font-size: 14px;
+                padding: 0 5px;
+                text-decoration: none;
+                cursor: pointer;
+            }
         }
     }
 }
@@ -332,6 +360,8 @@ html, body {
     height: 40px;
     float: left;
     background-color: #09af94;
+    z-index: 10;
+    position: relative;
 
     .hd_pt2_box {
         width: initial;
@@ -384,6 +414,61 @@ html, body {
     }
 }
 
+.Feedback_box {
+    width: 500px;
+    height: initial;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
+    z-index: 1;
+
+    .Fbk_b_htr {
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        float: left;
+        font-size: 14px;
+        color: #fff;
+        border-radius: 5px 5px 0 0;
+        padding: 0 10px;
+        background-color: #222;
+    }
+
+    .Fbk_b_ttarea {
+        width: 100%;
+        line-height: 30px;
+        float: left;
+        font-size: 12px;
+        color: #333;
+        padding: 10px 10px;
+        background-color: #fff;
+
+        .b_ttarea_box {
+            width: 480px;
+            max-height: 100px;
+            min-height: 100px;
+            float: left;
+            font-size: 12px;
+            color: #333;
+            border: 1px #aaa solid;
+            padding: 5px 5px;
+            line-height: 16px;
+        }
+    }
+
+    .Fbk_b_ftr {
+        width: 100%;
+        height: 30px;
+        float: left;
+        padding: 0 10px;
+        margin: 5px 0;
+    }
+}
+
 .firstlogin_box {
     width: 500px;
     height: initial;
@@ -405,16 +490,17 @@ html, body {
         text-align: center;
         font-size: 80px;
         margin: 0 0 20px 0;
-    }
 
-    .ftlogin_b_httt {
-        width: 100%;
-        line-height: 30px;
-        margin: 0 0 10px 0;
-        padding: 0 10px;
-        float: left;
-        font-size: 20px;
-        text-align: center;
+        .ftlogin_b_httt {
+            width: 100%;
+            line-height: 30px;
+            margin: 0 0 10px 0;
+            padding: 0 10px;
+            float: left;
+            font-size: 20px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif !important;
+        }
     }
 
     .ftlogin_b_part {
@@ -485,6 +571,118 @@ html, body {
     }
 }
 
+.passwordchange_box {
+    width: 500px;
+    height: initial;
+    padding: 15px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
+    z-index: 1;
+
+    .pwchange_b_icon {
+        width: 100%;
+        height: initial;
+        float: left;
+        color: #666;
+        text-align: center;
+        font-size: 80px;
+        margin: 0 0 20px 0;
+
+        .b_icon_tt {
+            width: 100%;
+            height: 30px;
+            line-height: 30px;
+            text-align: center;
+            font-size: 20px !important;
+            color: #333;
+            float: left;
+            font-family: Arial, Helvetica, sans-serif !important;
+        }
+    }
+
+    .pwchange_b_httt {
+        width: 100%;
+        line-height: 30px;
+        margin: 0 0 10px 0;
+        padding: 0 10px;
+        float: left;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .pwchange_b_part {
+        width: 100%;
+        height: initial;
+        float: left;
+        margin: 0 0 10px 0;
+
+        .b_pt_tt {
+            width: 150px;
+            line-height: 30px;
+            font-size: 14px;
+            float: left;
+            color: #333;
+            text-align: right;
+        }
+
+        .b_pt_box {
+            width: 100%;
+            height: 30px;
+            position: absolute;
+            left: 0;
+            padding: 0 15px 0 175px;
+
+            input {
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                font-size: 14px;
+                padding: 0 10px;
+                background-color: #fff;
+                border: 1px #aaa solid;
+            }
+        }
+
+        .b_pt_tt1 {
+            width: 70px;
+            line-height: 30px;
+            font-size: 14px;
+            float: left;
+            color: #333;
+            text-align: right;
+        }
+
+        .b_pt_box1 {
+            width: 100%;
+            height: 30px;
+            position: absolute;
+            left: 0;
+            padding: 0 15px 0 95px;
+
+            input {
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                font-size: 14px;
+                padding: 0 10px;
+                background-color: #fff;
+                border: 1px #aaa solid;
+            }
+        }
+    }
+
+    .pwchange_b_partbtm {
+        width: 100%;
+        height: 30px;
+        float: left;
+    }
+}
+
 .ctr_leftpart_home {
     width: 300px;
     height: initial;
@@ -530,6 +728,7 @@ html, body {
         line-height: 16px;
         padding: 5px 0;
         color: #fff;
+        background-color: transparent !important;
 
         a {
             width: inherit;
@@ -539,6 +738,82 @@ html, body {
             color: #aaa;
             padding: 1px 5px 1px 0;
             font-size: 12px;
+        }
+    }
+
+    li:hover {
+
+        a {
+            color: #fff;
+        }
+    }
+}
+
+.faq_box {
+    width: 100%;
+    min-height: 500px;
+    float: right;
+    border-radius: 5px 5px;
+    background-color: rgba(0, 0, 0, 0.03);
+
+    .faq_b_htrtt {
+        width: 100%;
+        height: 40px;
+        background-color: #222;
+        float: left;
+        border-radius: 5px 5px 0 0;
+        padding: 0 10px;
+        margin: 0 0 10px 0;
+
+        span {
+            width: initial;
+            float: left;
+            color: #fff;
+            line-height: 40px;
+            font-size: 14px;
+        }
+    }
+
+    .faq_b_row {
+        width: 100%;
+        height: initial;
+        float: left;
+        padding: 0 5px;
+        margin: 0 0 10px 0;
+
+        .b_row_htrtt {
+            width: 100%;
+            float: left;
+            color: #333;
+            line-height: 30px;
+            font-size: 12px;
+            font-weight: bold;
+            background-color: #ddd;
+            border-radius: 5px 5px;
+            margin: 5px 0 0 0;
+            padding: 0 5px;
+
+            .row_htrtt_icon {
+                color: #333;
+                line-height: 26px;
+                text-align: center;
+                float: right;
+                margin: 2px 0;
+                font-size: 18px;
+                padding: 0 10px;
+                cursor: pointer;
+            }
+        }
+
+        .b_row_htrst {
+            width: 100%;
+            height: initial;
+            float: left;
+            font-size: 12px;
+            line-height: 16px;
+            color: #333;
+            padding: 10px 15px;
+            background-color: #fff;
         }
     }
 }
@@ -1099,13 +1374,13 @@ html, body {
         height: 100%;
         float: right;
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         /*padding: 0 10px 50px 210px;*/
         padding: 0 10px 15px 210px;
 
         .ctr_rtpt_box {
             width: 100%;
-            height: inherit;
+            height: 515px;
             float: left;
             position: relative;
             border-radius: 5px 5px;
@@ -1167,11 +1442,13 @@ html, body {
             .ctr_rtpt_b_ftr {
                 width: 100%;
                 height: 30px;
-                background-color: rgba(0, 0, 0, .08);
+                /*background-color: rgba(0, 0, 0, .08);*/
                 border-radius: 0 0 5px 5px;
                 padding: 0 10px;
                 position: absolute;
                 bottom: 0;
+                background-color: #eee !important;
+                z-index: 1;
 
                 span {
                     width: initial;
@@ -1479,6 +1756,15 @@ tbody {
             position: relative;
             display: table;
         }
+
+        .popupbox_inb_icon_blue {
+            width: 100%;
+            height: initial;
+            float: left;
+            color: #0069ae;
+            text-align: center;
+            font-size: 66px;
+        }
     }
 }
 
@@ -1556,6 +1842,17 @@ ul {
     cursor: pointer;
 }
 
+.btn_email {
+    width: 20px;
+    line-height: 30px !important;
+    text-align: center;
+    float: left;
+    font-size: 16px !important;
+    color: #154eb7;
+    margin: 0 2px;
+    cursor: pointer;
+}
+
 .btn_trash {
     width: 20px;
     line-height: 30px !important;
@@ -1593,6 +1890,21 @@ ul {
     float: right;
     border-radius: 5px;
     background-color: #0069ae;
+    color: #fff;
+    cursor: pointer;
+}
+
+.rtpt_ftr_deletebtn {
+    width: initial;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    /*margin: 0 0 0 10px;*/
+    margin: 5px 5px;
+    font-size: 14px;
+    float: right;
+    border-radius: 5px;
+    background-color: #ff0000;
     color: #fff;
     cursor: pointer;
 }
@@ -1668,6 +1980,116 @@ ul {
 .rtpt_ftr_addbtn:hover {
     background-color: #004f83;
 }
+
+.rtpt_deletebtn {
+    width: initial;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    margin: 0 0 0 10px;
+    font-size: 14px;
+    float: right;
+    border-radius: 5px;
+    background-color: #f00;
+    color: #fff;
+    cursor: pointer;
+}
+
+.message_part {
+    width: 49%;
+    height: 500px;
+    float: left;
+    border-radius: 5px 5px;
+    border: 1px #ccc solid;
+    margin: 0 0 0 10px;
+    overflow: auto;
+
+    .mse_pt_table {
+        width: 100%;
+        margin: 0 0 30px 0;
+        float: left;
+        line-height: 30px;
+        font-size: 12px;
+
+        thead {
+            background-color: #aaa;
+            height: 30px;
+
+            th {
+                border-right: 1px #ccc solid;
+                padding: 0 5px;
+                color: #fff;
+            }
+
+            th:last-child {
+                border-right: 0;
+            }
+        }
+    }
+
+    .mse_pt_itenbox {
+        width: inherit;
+        height: 30px;
+        background-color: #ccc;
+        border-radius: 0 0 5px 5px;
+        padding: 0 10px;
+        position: absolute;
+        bottom: 0;
+
+        span {
+            width: 100%;
+            float: left;
+            color: #333;
+            line-height: 30px;
+            font-size: 12px;
+        }
+    }
+}
+
+.mse_pt_msebox {
+    width: 49%;
+    min-height: 500px;
+    float: right;
+    border-radius: 5px 5px;
+    margin: 0 10px 0 0;
+    background-color: rgba(0, 0, 0, 0.03);
+
+    .msebox_htr {
+        width: 100%;
+        height: 40px;
+        background-color: #222;
+        float: left;
+        border-radius: 5px 5px 0 0;
+        padding: 0 10px;
+
+        span {
+            width: initial;
+            float: left;
+            color: #fff;
+            line-height: 40px;
+            font-size: 14px;
+        }
+
+        .msebox_htr_date {
+            width: initial;
+            float: right;
+            padding: 0 0 0 10px;
+            line-height: 40px;
+            font-size: 12px;
+            color: #fff;
+        }
+    }
+
+    .msebox_ttbox {
+        width: 100%;
+        height: initial;
+        float: left;
+        font-size: 12px;
+        color: #333;
+        line-height: 16px;
+        padding: 10px 10px;
+    }
+}
 // Triangle
 .arrow_up {
     width: 0;
@@ -1733,7 +2155,3 @@ ul {
     border-right: 10px solid #026f5d;
 }
 // Triangle
-
-.input_field_fill_available {
-    width: -webkit-fill-available !important;
-}
