--- a/mTime/mTime/scss/style.scss
+++ b/mTime/mTime/scss/style.scss
@@ -1494,13 +1494,13 @@ td {
                 padding: 0 10px;
                 position: absolute;
                 bottom: 0;
-                background-color: #eee !important;
+                background-color: #444;
                 z-index: 1;
 
                 span {
                     width: initial;
                     float: left;
-                    color: #333;
+                    color: #fff;
                     line-height: 30px;
                     font-size: 12px;
                 }
